# aws-hack-october

./: .gitignore  README.md  fastapi.service  workaround.txt
src/: config.py  db_conn.py  main.py  pyproject.toml
