[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vardan <vardan.aloyan@swisscom.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
